tweaked and improved built process

--- a/src/templates/docs/layouts/base.html
+++ b/src/templates/docs/layouts/base.html
@@ -12,7 +12,7 @@
     <head>
         <meta charset="utf-8">
         <title>Yoshino Frontend Documentation</title>
-        <base href="{{ BASEPATH }}" />
+        <base href="/" />
         <link href="assets/css/yoshino-ui-core.css" rel="stylesheet" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         {% block customStyles %}{% endblock %}
@@ -58,11 +58,9 @@
                 </div>
             </footer>
         </div>
-        <script src="assets/js/libs/jquery-2.1.1.min.js"></script>
-        <script src="assets/js/libs/jquery.mobile.custom.min.js"></script>
+        <script src="assets/js/libs/jquery.js"></script>
+        <script src="assets/js/libs/jquery-ui.js"></script>
         <script src="assets/js/libs/beautify.js"></script>
-        <script src="assets/js/libs/beautify-html.js"></script>
-        <script src="assets/js/libs/beautify-css.js"></script>
         <script src="assets/js/libs/prism.js" data-manual></script>
         <script src="assets/js/yoshino-ui-core.js"></script>
         <script>
