--- a/src/assets/less/yoshino-ui-core.less
+++ b/src/assets/less/yoshino-ui-core.less
@@ -2,7 +2,7 @@
 
 // normalize
 
-@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css");
+@import (less) "./bower_components/normalize-css/normalize.css";
 
 // theme
 
