--- a/src/templates/docs/pages/elements/modal.html
+++ b/src/templates/docs/pages/elements/modal.html
@@ -14,7 +14,7 @@ Modals are simple, regular pages, referenced by either `href`-attributes or a pa
 
 ### Modal Page
 Modal pages must at least have an element with the CSS-class `.modal`. Everything else is optional. There is only one modifier available: `.modal--small`. It affects the modal width.
-The following is an example for a simple (small) modal page. You may want to <a href="desktop/pages/modal_demo.html" target="_blank">open it in another browser tab</a>.
+The following is an example for a simple (small) modal page. You may want to <a href="docs/demos/modal.html" target="_blank">open it in another browser tab</a>.
 {% endmarkdown %}
 
 <div class="documentation__block documentation__block--darkMainColor">
@@ -43,7 +43,7 @@ If you wish to reference to a modal page to show it as a modal, you need to appl
 
 <div class="documentation__block">
     <div class="documentation__example" data-printcode="language:markup; print:true;">
-        <a class="btn btn--large" href="desktop/pages/modal_demo.html" data-modal>Show Demo Modal</a>
+        <a class="btn btn--large" href="docs/demos/modal.html" data-modal>Show Demo Modal</a>
     </div>
 </div>
 
