added utility class for position:fixed

--- a/src/assets/less/utilities/layout.less
+++ b/src/assets/less/utilities/layout.less
@@ -10,6 +10,7 @@
 
 .pos-abs  { position: absolute !important; }
 .pos-rel  { position: relative !important; }
+.pos-fix  { position: fixed !important; }
 .pos-stc  { position: static !important; }
 
 // absolute positioning
