--- a/src/assets/less/elements/buttons.less
+++ b/src/assets/less/elements/buttons.less
@@ -139,6 +139,12 @@
         input[type="submit"] {
             text-shadow: 0 1px 0 #fff;
         }
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-main-10;
+        }
 
         &:hover,
         &:focus,
@@ -167,6 +173,12 @@
 
         input[type="submit"] {
             text-shadow: 0 -1px 0 @color-main-7;
+        }
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-main-25;
         }
 
         &:hover,
@@ -199,6 +211,12 @@
             text-shadow: 0 1px 0 @color-attention-22;
         }
 
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-attention-8;
+        }
+
         &:hover,
         &:focus,
         &.btn--focus {
@@ -228,6 +246,12 @@
         input[type="submit"] {
             text-shadow: 0 1px 0 @color-negative-22;
         }
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-negative-6;
+        }
 
         &:hover,
         &:focus,
@@ -256,6 +280,12 @@
         box-shadow: 0 1px 0 @color-positive-22 inset;
         color: @color-positive-8;
         text-shadow: 0 1px 0 @color-positive-23;
+
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-positive-8;
+        }
 
         input[type="submit"] {
             text-shadow: 0 1px 0 @color-positive-23;
@@ -314,6 +344,12 @@
         background: @color-main-24;
         color: @color-main-10;
         text-shadow: none;
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-main-10;
+        }
 
         &:hover,
         &:focus,
@@ -331,7 +367,14 @@
     &.btn--dark {
 
         background: @color-main-10;
+        color: @color-main-25;
         text-shadow: none;
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-main-25;
+        }
 
         &:hover,
         &:focus,
@@ -349,8 +392,14 @@
     &.btn--attention {
 
         background: @color-attention-20;
-        color:  @color-attention-8;
+        color: @color-attention-8;
         text-shadow: none;
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-attention-8;
+        }
 
         &:hover,
         &:focus,
@@ -371,6 +420,12 @@
         background: @color-negative-17;
         color: @color-negative-5;
         text-shadow: none;
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-negative-5;
+        }
 
         &:hover,
         &:focus,
@@ -391,6 +446,12 @@
         background: @color-positive-18;
         color: @color-positive-5;
         text-shadow: none;
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-positive-5;
+        }
 
         &:hover,
         &:focus,
@@ -416,6 +477,12 @@
     line-height: 2.1rem;
     padding: 0 0.9rem;
     text-shadow: none;
+    
+    a&,
+    a:link&,
+    a:visited& {
+        color: @color-main-20;
+    }
 
     // interactive states
 
@@ -448,6 +515,12 @@
         background: transparent;
         border-color: #fff;
         color: #fff;
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: #fff;
+        }
 
         &:hover,
         &:focus,
@@ -462,6 +535,12 @@
         background: transparent;
         border-color: @color-main-9;
         color: @color-main-9;
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-main-9;
+        }
 
         &:hover,
         &:focus,
@@ -476,6 +555,12 @@
         background: transparent;
         border-color: @color-attention-15;
         color: @color-attention-15;
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-attention-15;
+        }
 
         &:hover,
         &:focus,
@@ -491,6 +576,12 @@
         background: transparent;
         border-color: @color-negative-18;
         color: @color-negative-18;
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-negative-18;
+        }
 
         &:hover,
         &:focus,
@@ -506,6 +597,12 @@
         background: transparent;
         border-color: @color-positive-15;
         color: @color-positive-15;
+        
+        a&,
+        a:link&,
+        a:visited& {
+            color: @color-positive-15;
+        }
 
         &:hover,
         &:focus,
