--- a/src/templates/docs/pages/elements/_blank.html
+++ b/src/templates/docs/pages/elements/_blank.html
@@ -22,7 +22,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 </div>
 
 {% markdown %}
-### Modifiers{
+### Modifiers
 {% endmarkdown %}
 
 <div class="documentation__block">
