--- a/src/assets/less/utilities/layout.less
+++ b/src/assets/less/utilities/layout.less
@@ -66,6 +66,77 @@
 .w-3-4  { width: 75%;   }
 .w-3-5  { width: 60%;   }
 .w-4-5  { width: 80%;   }
+
+// fractional widths for small screens
+
+.mixin-smallScreen({
+
+    .w-s-1-1  { width: 100%;  }
+    .w-s-1-2  { width: 50%;   }
+    .w-s-1-3  { width: 33.3%; }
+    .w-s-1-4  { width: 25%;   }
+    .w-s-1-5  { width: 20%;   }
+    .w-s-2-3  { width: 66.6%; }
+    .w-s-2-5  { width: 40%;   }
+    .w-s-3-4  { width: 75%;   }
+    .w-s-3-5  { width: 60%;   }
+    .w-s-4-5  { width: 80%;   }
+
+});
+
+// fractional widths for medium screens
+
+.mixin-mediumScreen({
+
+    .w-m-1-1  { width: 100%;  }
+    .w-m-1-2  { width: 50%;   }
+    .w-m-1-3  { width: 33.3%; }
+    .w-m-1-4  { width: 25%;   }
+    .w-m-1-5  { width: 20%;   }
+    .w-m-2-3  { width: 66.6%; }
+    .w-m-2-5  { width: 40%;   }
+    .w-m-3-4  { width: 75%;   }
+    .w-m-3-5  { width: 60%;   }
+    .w-m-4-5  { width: 80%;   }
+
+});
+
+// fractional widths for large screens
+
+.mixin-largeScreen({
+
+    .w-l-1-1  { width: 100%;  }
+    .w-l-1-2  { width: 50%;   }
+    .w-l-1-3  { width: 33.3%; }
+    .w-l-1-4  { width: 25%;   }
+    .w-l-1-5  { width: 20%;   }
+    .w-l-2-3  { width: 66.6%; }
+    .w-l-2-5  { width: 40%;   }
+    .w-l-3-4  { width: 75%;   }
+    .w-l-3-5  { width: 60%;   }
+    .w-l-4-5  { width: 80%;   }
+
+});
+
+// fractional widths for x-large screens
+
+.mixin-xLargeScreen({
+    
+    .w-xl-1-1  { width: 100%;  }
+    .w-xl-1-2  { width: 50%;   }
+    .w-xl-1-3  { width: 33.3%; }
+    .w-xl-1-4  { width: 25%;   }
+    .w-xl-1-5  { width: 20%;   }
+    .w-xl-2-3  { width: 66.6%; }
+    .w-xl-2-5  { width: 40%;   }
+    .w-xl-3-4  { width: 75%;   }
+    .w-xl-3-5  { width: 60%;   }
+    .w-xl-4-5  { width: 80%;   }
+    
+});
+
+// auto width
+
 .w-auto { width: auto;  }
 
 // fixed width & height
@@ -124,6 +195,26 @@
 .invisible { visibility: hidden !important; }
 .hidden    { .mixin-hidden !important; }
 
+.mixin-smallScreen({
+    .invisible-s { visibility: hidden !important; }
+    .hidden-s    { .mixin-hidden !important; }
+});
+
+.mixin-mediumScreen({
+    .invisible-m { visibility: hidden !important; }
+    .hidden-m    { .mixin-hidden !important; }
+});
+
+.mixin-largeScreen({
+    .invisible-l { visibility: hidden !important; }
+    .hidden-l    { .mixin-hidden !important; }
+});
+
+.mixin-xLargeScreen({
+    .invisible-xl { visibility: hidden !important; }
+    .hidden-xl    { .mixin-hidden !important; }
+});
+
 // vertical alignment
 
 .val-m { vertical-align: middle !important; }
@@ -146,3 +237,16 @@
 .ovrfl-x-hide { overflow-x: hidden !important; }
 .ovrfl-y-hide { overflow-y: hidden !important; }
 .ovrfl-hide   { overflow: hidden !important; }
+
+// z-index
+
+.z-1  { z-index: 100; }
+.z-2  { z-index: 200; }
+.z-3  { z-index: 300; }
+.z-4  { z-index: 400; }
+.z-5  { z-index: 500; }
+.z-6  { z-index: 600; }
+.z-7  { z-index: 700; }
+.z-8  { z-index: 800; }
+.z-9  { z-index: 900; }
+.z-10 { z-index: 1000; }
