--- a/src/assets/less/utilities/layout.less
+++ b/src/assets/less/utilities/layout.less
@@ -226,6 +226,26 @@
 .fl-r { float: right !important; }
 .fl-l { float: left !important; }
 
+.mixin-smallScreen({
+    .fl-s-r { float: right !important; }
+    .fl-s-l { float: left !important; }
+});
+
+.mixin-mediumScreen({
+    .fl-m-r { float: right !important; }
+    .fl-m-l { float: left !important; }
+});
+
+.mixin-largeScreen({
+    .fl-l-r { float: right !important; }
+    .fl-l-l { float: left !important; }
+});
+
+.mixin-xLargeScreen({
+    .fl-xl-r { float: right !important; }
+    .fl-xl-l { float: left !important; }
+});
+
 .cl-r { clear: right !important; }
 .cl-l { clear: left !important; }
 .cl-b { clear: both !important; }
