--- a/src/assets/less/theme/typography.less
+++ b/src/assets/less/theme/typography.less
@@ -40,21 +40,21 @@
 
 @h1: {
     font-weight: normal;
-    font-family: @font-serif;
+    font-family: @font-sansserif;
     font-size: 4rem;
     line-height: 4rem;
 };
 
 @h2: {
     font-weight: normal;
-    font-family: @font-serif;
+    font-family: @font-sansserif;
     font-size: 2.5rem;
     line-height: 2.75rem;
 };
 
 @h3: {
     font-weight: normal;
-    font-family: @font-serif;
+    font-family: @font-sansserif;
     font-size: 2rem;
     line-height: 2.25rem;
 };
