--- a/src/assets/less/core/debug.less
+++ b/src/assets/less/core/debug.less
@@ -35,10 +35,10 @@ body::after when (@broadCastActiveMediaqueryToJs = true) {
     position: absolute;
     width: 1px;
 
-    .mixin-smallScreen({  content: 'small';  });
-    .mixin-mediumScreen({ content: 'medium'; });
-    .mixin-largeScreen({  content: 'large';  });
-    .mixin-xLargeScreen({ content: 'xlarge'; });
+    @media @bp-only-s  { content: 'small';  }
+    @media @bp-only-m  { content: 'medium'; }
+    @media @bp-only-l  { content: 'large';  }
+    @media @bp-only-xl { content: 'xlarge'; }
 
 }
 
@@ -46,10 +46,10 @@ body::after when (@broadCastActiveMediaqueryToJs = true) {
 
 body::after when (@debugMediaquery = true) {
 
-    background: @red-10;
     .mixin-defaultBorderRadius;
+    background: #00ff8a;
     bottom: 1rem;
-    color: #fff;
+    color: #1f4f39;
     content: 'none';
     font-size: 1.5rem;
     height: auto;
@@ -60,10 +60,10 @@ body::after when (@debugMediaquery = true) {
     position: fixed;
     width: auto;
     z-index: 1000;
-
-    .mixin-smallScreen({  content: 'small';  });
-    .mixin-mediumScreen({ content: 'medium'; });
-    .mixin-largeScreen({  content: 'large';  });
-    .mixin-xLargeScreen({ content: 'xlarge'; });
+    
+    @media @bp-only-s  { content: 'small';  }
+    @media @bp-only-m  { content: 'medium'; }
+    @media @bp-only-l  { content: 'large';  }
+    @media @bp-only-xl { content: 'xlarge'; }
 
 }
