--- a/src/assets/less/theme/breakpoints.less
+++ b/src/assets/less/theme/breakpoints.less
@@ -1,15 +1,15 @@
 /** breakpoints.less */
 
-// strict breakpoints
+// "strict" breakpoints
 
-@bpSmall  : ~"only screen and (min-width: 1px) and (max-width: 699px)";
-@bpMedium : ~"only screen and (min-width: 700px) and (max-width: 959px)";
-@bpLarge  : ~"only screen and (min-width: 960px) and (max-width: 1219px)";
-@bpXLarge : ~"only screen and (min-width: 1220px)";
+@bp-only-s  : ~"only screen and (min-width: 1px) and (max-width: 699px)";
+@bp-only-m  : ~"only screen and (min-width: 700px) and (max-width: 959px)";
+@bp-only-l  : ~"only screen and (min-width: 960px) and (max-width: 1219px)";
+@bp-only-xl : ~"only screen and (min-width: 1220px)";
 
-// overlapping breakpoints
+// "overlapping" breakpoints
 
-@bpSmall-overlap  : ~"only screen and (max-width: 700px)";
-@bpMedium-overlap : ~"only screen and (min-width: 701px)";
-@bpLarge-overlap  : ~"only screen and (min-width: 960px)";
-@bpXLarge-overlap : ~"only screen and (min-width: 1220px)";
+@bp-from-s  : ~"only screen and (max-width: 700px)";
+@bp-from-m  : ~"only screen and (min-width: 701px)";
+@bp-from-l  : ~"only screen and (min-width: 960px)";
+@bp-from-xl : ~"only screen and (min-width: 1220px)";
