--- a/src/assets/less/utilities/layout.less
+++ b/src/assets/less/utilities/layout.less
@@ -56,88 +56,80 @@
     box-sizing: border-box;
 }
 
-.w-1-1  { width: 100%;  }
-.w-1-2  { width: 50%;   }
-.w-1-3  { width: 33.3%; }
-.w-1-4  { width: 25%;   }
-.w-1-5  { width: 20%;   }
-.w-2-3  { width: 66.6%; }
-.w-2-5  { width: 40%;   }
-.w-3-4  { width: 75%;   }
-.w-3-5  { width: 60%;   }
-.w-4-5  { width: 80%;   }
+.w-1-1 { width: 100%;  }
+.w-1-2 { width: 50%;   }
+.w-1-3 { width: 33.3%; }
+.w-1-4 { width: 25%;   }
+.w-1-5 { width: 20%;   }
+.w-2-3 { width: 66.6%; }
+.w-2-5 { width: 40%;   }
+.w-3-4 { width: 75%;   }
+.w-3-5 { width: 60%;   }
+.w-4-5 { width: 80%;   }
 
 // fractional widths for small screens
 
-.mixin-smallScreen({
-
-    .w-s-1-1  { width: 100%;  }
-    .w-s-1-2  { width: 50%;   }
-    .w-s-1-3  { width: 33.3%; }
-    .w-s-1-4  { width: 25%;   }
-    .w-s-1-5  { width: 20%;   }
-    .w-s-2-3  { width: 66.6%; }
-    .w-s-2-5  { width: 40%;   }
-    .w-s-3-4  { width: 75%;   }
-    .w-s-3-5  { width: 60%;   }
-    .w-s-4-5  { width: 80%;   }
-
-});
+@media @bp-only-s {
+    .w-s-1-1 { width: 100%;  }
+    .w-s-1-2 { width: 50%;   }
+    .w-s-1-3 { width: 33.3%; }
+    .w-s-1-4 { width: 25%;   }
+    .w-s-1-5 { width: 20%;   }
+    .w-s-2-3 { width: 66.6%; }
+    .w-s-2-5 { width: 40%;   }
+    .w-s-3-4 { width: 75%;   }
+    .w-s-3-5 { width: 60%;   }
+    .w-s-4-5 { width: 80%;   }
+}
 
 // fractional widths for medium screens
 
-.mixin-mediumScreen({
-
-    .w-m-1-1  { width: 100%;  }
-    .w-m-1-2  { width: 50%;   }
-    .w-m-1-3  { width: 33.3%; }
-    .w-m-1-4  { width: 25%;   }
-    .w-m-1-5  { width: 20%;   }
-    .w-m-2-3  { width: 66.6%; }
-    .w-m-2-5  { width: 40%;   }
-    .w-m-3-4  { width: 75%;   }
-    .w-m-3-5  { width: 60%;   }
-    .w-m-4-5  { width: 80%;   }
-
-});
+@media @bp-only-m {
+    .w-m-1-1 { width: 100%;  }
+    .w-m-1-2 { width: 50%;   }
+    .w-m-1-3 { width: 33.3%; }
+    .w-m-1-4 { width: 25%;   }
+    .w-m-1-5 { width: 20%;   }
+    .w-m-2-3 { width: 66.6%; }
+    .w-m-2-5 { width: 40%;   }
+    .w-m-3-4 { width: 75%;   }
+    .w-m-3-5 { width: 60%;   }
+    .w-m-4-5 { width: 80%;   }
+}
 
 // fractional widths for large screens
 
-.mixin-largeScreen({
-
-    .w-l-1-1  { width: 100%;  }
-    .w-l-1-2  { width: 50%;   }
-    .w-l-1-3  { width: 33.3%; }
-    .w-l-1-4  { width: 25%;   }
-    .w-l-1-5  { width: 20%;   }
-    .w-l-2-3  { width: 66.6%; }
-    .w-l-2-5  { width: 40%;   }
-    .w-l-3-4  { width: 75%;   }
-    .w-l-3-5  { width: 60%;   }
-    .w-l-4-5  { width: 80%;   }
-
-});
+@media @bp-only-l {
+    .w-l-1-1 { width: 100%;  }
+    .w-l-1-2 { width: 50%;   }
+    .w-l-1-3 { width: 33.3%; }
+    .w-l-1-4 { width: 25%;   }
+    .w-l-1-5 { width: 20%;   }
+    .w-l-2-3 { width: 66.6%; }
+    .w-l-2-5 { width: 40%;   }
+    .w-l-3-4 { width: 75%;   }
+    .w-l-3-5 { width: 60%;   }
+    .w-l-4-5 { width: 80%;   }
+}
 
 // fractional widths for x-large screens
 
-.mixin-xLargeScreen({
-    
-    .w-xl-1-1  { width: 100%;  }
-    .w-xl-1-2  { width: 50%;   }
-    .w-xl-1-3  { width: 33.3%; }
-    .w-xl-1-4  { width: 25%;   }
-    .w-xl-1-5  { width: 20%;   }
-    .w-xl-2-3  { width: 66.6%; }
-    .w-xl-2-5  { width: 40%;   }
-    .w-xl-3-4  { width: 75%;   }
-    .w-xl-3-5  { width: 60%;   }
-    .w-xl-4-5  { width: 80%;   }
-    
-});
+@media @bp-only-xl {
+    .w-xl-1-1 { width: 100%;  }
+    .w-xl-1-2 { width: 50%;   }
+    .w-xl-1-3 { width: 33.3%; }
+    .w-xl-1-4 { width: 25%;   }
+    .w-xl-1-5 { width: 20%;   }
+    .w-xl-2-3 { width: 66.6%; }
+    .w-xl-2-5 { width: 40%;   }
+    .w-xl-3-4 { width: 75%;   }
+    .w-xl-3-5 { width: 60%;   }
+    .w-xl-4-5 { width: 80%;   }
+}
 
 // auto width
 
-.w-auto { width: auto;  }
+.w-auto { width: auto; }
 
 // fixed width & height
 
@@ -192,28 +184,41 @@
 
 // visibility
 
+.visible   { visibility: visible !important; }
 .invisible { visibility: hidden !important; }
 .hidden    { .mixin-hidden !important; }
 
-.mixin-smallScreen({
-    .invisible-s { visibility: hidden !important; }
-    .hidden-s    { .mixin-hidden !important; }
-});
+@media @bp-only-s {
+    .hidden-s { .mixin-hidden !important; }
+}
 
-.mixin-mediumScreen({
-    .invisible-m { visibility: hidden !important; }
-    .hidden-m    { .mixin-hidden !important; }
-});
+@media @bp-from-s {
+    .hidden-from-s { .mixin-hidden !important; }
+}
 
-.mixin-largeScreen({
-    .invisible-l { visibility: hidden !important; }
-    .hidden-l    { .mixin-hidden !important; }
-});
+@media @bp-only-m {
+    .hidden-m { .mixin-hidden !important; }
+}
 
-.mixin-xLargeScreen({
-    .invisible-xl { visibility: hidden !important; }
-    .hidden-xl    { .mixin-hidden !important; }
-});
+@media @bp-from-m {
+    .hidden-from-m { .mixin-hidden !important; }
+}
+
+@media @bp-only-l {
+    .hidden-l { .mixin-hidden !important; }
+}
+
+@media @bp-from-l {
+    .hidden-from-l { .mixin-hidden !important; }
+}
+
+@media @bp-only-xl {
+    .hidden-xl { .mixin-hidden !important; }
+}
+
+@media @bp-from-xl {
+    .hidden-from-xl { .mixin-hidden !important; }
+}
 
 // vertical alignment
 
@@ -226,25 +231,25 @@
 .fl-r { float: right !important; }
 .fl-l { float: left !important; }
 
-.mixin-smallScreen({
+@media @bp-only-s {
     .fl-s-r { float: right !important; }
     .fl-s-l { float: left !important; }
-});
+}
 
-.mixin-mediumScreen({
+@media @bp-only-m {
     .fl-m-r { float: right !important; }
     .fl-m-l { float: left !important; }
-});
+}
 
-.mixin-largeScreen({
+@media @bp-only-l {
     .fl-l-r { float: right !important; }
     .fl-l-l { float: left !important; }
-});
+}
 
-.mixin-xLargeScreen({
+@media @bp-only-xl {
     .fl-xl-r { float: right !important; }
     .fl-xl-l { float: left !important; }
-});
+}
 
 .cl-r { clear: right !important; }
 .cl-l { clear: left !important; }
