moved visibility-utility classes

--- a/src/assets/less/yoshino-ui-core.less
+++ b/src/assets/less/yoshino-ui-core.less
@@ -29,6 +29,7 @@
 @import "utilities/spacing.less";
 @import "utilities/styling.less";
 @import "utilities/typography.less";
+@import "utilities/visibility.less";
 
 // elements
 
