added/refactored responsive utility-classes

--- a/src/assets/less/yoshino-ui-core.less
+++ b/src/assets/less/yoshino-ui-core.less
@@ -26,6 +26,9 @@
 @import "utilities/interface.less";
 @import "utilities/jsFallback.less";
 @import "utilities/layout.less";
+@import "utilities/responsive-layout.less";
+@import "utilities/responsive-spacing.less";
+@import "utilities/responsive-typography.less";
 @import "utilities/spacing.less";
 @import "utilities/styling.less";
 @import "utilities/typography.less";
