--- a/src/templates/docs/pages/core/mixins.html
+++ b/src/templates/docs/pages/core/mixins.html
@@ -19,5 +19,6 @@ Use this mixin to _visually_ hide elements. These elements are still accessible 
 
 #### .mixin-clearAppearance
 Use this mixin to disable the default browser styling for certain elements – especially input elements. [Learn more about the appearance rule](https://css-tricks.com/almanac/properties/a/appearance/).
+{% endmarkdown %}
 
 {% endblock %}
