added/refactored default border radius

--- a/src/assets/less/core/mixins.less
+++ b/src/assets/less/core/mixins.less
@@ -27,3 +27,8 @@
     -webkit-appearance: none;
     appearance: none;
 }
+
+// styling
+// =======
+
+.mixin-defaultBorderRadius() { border-radius: (@borderRadius * 1px); }
