--- a/src/assets/less/elements/form.less
+++ b/src/assets/less/elements/form.less
@@ -462,7 +462,7 @@ form .tooltip__wrapper {
 
         & + .hint {
 
-            border-radius: .2rem 0 0 0;
+            border-radius: (@borderRadius * 1px) 0 0 0;
             height: 20px;
             width: 20px;
 
