--- a/src/assets/less/elements/indexGroup.less
+++ b/src/assets/less/elements/indexGroup.less
@@ -79,7 +79,7 @@
         padding: 0;
 
         a {
-            border-radius: 0 .2rem .2rem 0;
+            border-radius: 0 (@borderRadius * 1px) (@borderRadius * 1px) 0;
             font-weight: normal;
             line-height: 20px;
             padding: 5px 10px;
