--- a/src/assets/less/elements/itemDisplay.less
+++ b/src/assets/less/elements/itemDisplay.less
@@ -100,7 +100,7 @@
     }
 
     .tabBar {
-        border-radius: .2rem .2rem 0 0;
+        border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
     }
 
     .tabBar .current {
