--- a/src/assets/less/elements/mainMenu.less
+++ b/src/assets/less/elements/mainMenu.less
@@ -17,7 +17,7 @@
 
 .mainMenu__menu {
 
-    border-radius: .2rem .2rem 0 0;
+    border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
     border: @color-main-23 1px solid;
     border-bottom: 0;
     box-sizing: border-box;
