--- a/src/assets/less/elements/modal-s.less
+++ b/src/assets/less/elements/modal-s.less
@@ -2,7 +2,7 @@
 
 .modal-s {
     background: @color-main-25;
-    border-radius: .2rem .2rem 0 0;
+    border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
     box-shadow: 0 0 2rem @color-main-5;
     left: 50%;
     margin-bottom: 1rem;
@@ -21,7 +21,7 @@
 .modal-s__header {
 
     border-bottom: @color-main-23 1px solid;
-    border-radius: .2rem .2rem 0 0;
+    border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
     margin: -1rem -1rem 1rem -1rem;
     padding: 0 4.5rem 0 1rem;
 
