--- a/src/assets/less/elements/modal.less
+++ b/src/assets/less/elements/modal.less
@@ -19,7 +19,7 @@
 .modal__header {
 
     border-bottom: @color-main-23 1px solid;
-    border-radius: .2rem .2rem 0 0;
+    border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
     margin: 0 0 1rem 0;
     padding: 0 1rem;
 
