--- a/src/assets/less/elements/pageRewind.less
+++ b/src/assets/less/elements/pageRewind.less
@@ -4,7 +4,7 @@
 
     .mixin-shadow-3;
     background: @color-main-24;
-    border-radius: .2rem .2rem 0 0;
+    border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
     border-bottom: 0;
     border: @color-main-20 1px solid;
     bottom: -5px;
