--- a/src/assets/less/elements/popOver.less
+++ b/src/assets/less/elements/popOver.less
@@ -11,7 +11,7 @@
 
 .popOver {
     background: @color-main-25;
-    border-radius: .3rem;
+    border-radius: (@borderRadius * 1px);
     border: @color-main-20 1px solid;
     box-sizing: border-box;
 }
