--- a/src/assets/less/elements/sectionHeader.less
+++ b/src/assets/less/elements/sectionHeader.less
@@ -28,7 +28,7 @@
     padding-left: 0;
 
     &::before {
-        border-radius: .2rem 0 0 .2rem;
+        border-radius: (@borderRadius * 1px) 0 0 (@borderRadius * 1px);
         left: -25px;
     }
 
