--- a/src/assets/less/elements/singleInputCombo.less
+++ b/src/assets/less/elements/singleInputCombo.less
@@ -10,12 +10,12 @@
     input[type="text"],
     input[type="url"],
     textarea {
-        border-radius: .2rem .2rem 0 0;
+        border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
         width: 100%;
     }
 
     .btn {
-        border-radius: 0 0 .2rem .2rem;
+        border-radius: 0 0 (@borderRadius * 1px) (@borderRadius * 1px);
         border-top: 0;
         display: block;
         width: 100%;
