--- a/src/assets/less/elements/stepper.less
+++ b/src/assets/less/elements/stepper.less
@@ -144,12 +144,12 @@
 }
 
 .stepper__btnPlus {
-    border-radius: .2rem 0 0 0;
+    border-radius: (@borderRadius * 1px) 0 0 0;
     top: 0;
 }
 
 .stepper__btnMinus {
-    border-radius: 0 0 0 .2rem;
+    border-radius: 0 0 0 (@borderRadius * 1px);
     bottom: 0;
 }
 
