--- a/src/assets/less/elements/stickyHeader.less
+++ b/src/assets/less/elements/stickyHeader.less
@@ -16,7 +16,7 @@
 
         .mixin-shadow-3;
         background: #fff;
-        border-radius: 0 0 .2rem .2rem;
+        border-radius: 0 0 (@borderRadius * 1px) (@borderRadius * 1px);
         height: 70px;
         left: 50%;
         margin-left: -490px;
