--- a/src/assets/less/elements/tabMenu.less
+++ b/src/assets/less/elements/tabMenu.less
@@ -48,7 +48,7 @@
     .current:first-child {
 
         background: #fff;
-        border-radius: .2rem 0 0 .2rem;
+        border-radius: (@borderRadius * 1px) 0 0 (@borderRadius * 1px);
         border: @color-main-23 1px solid;
         border-right: 0;
 
