--- a/src/assets/less/elements/box.less
+++ b/src/assets/less/elements/box.less
@@ -24,7 +24,7 @@
     .mixin-clearfix;
 
     [class*="box-"]:first-child {
-        border-radius: .2rem .2rem 0 0;
+        border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
         margin: 0;
     }
 
@@ -34,7 +34,7 @@
     }
 
     [class*="box-"]:last-child {
-        border-radius: 0 0 .2rem .2rem;
+        border-radius: 0 0 (@borderRadius * 1px) (@borderRadius * 1px);
     }
 
 }
