--- a/src/assets/less/elements/flipBtns.less
+++ b/src/assets/less/elements/flipBtns.less
@@ -39,7 +39,7 @@
 
 .flipBtns__btnPrev {
 
-    border-radius: .2rem 0 0 .2rem;
+    border-radius: (@borderRadius * 1px) 0 0 (@borderRadius * 1px);
     border-right: 0;
     left: -30px;
 
@@ -51,7 +51,7 @@
 
 .flipBtns__btnNext {
 
-    border-radius: 0 .2rem .2rem 0;
+    border-radius: 0 (@borderRadius * 1px) (@borderRadius * 1px) 0;
     border-left: 0;
     right: -30px;
 
@@ -66,7 +66,7 @@
 &.flipBtns--inset {
 
     .flipBtns__btnPrev {
-        border-radius: 0 .2rem .2rem 0;
+        border-radius: 0 (@borderRadius * 1px) (@borderRadius * 1px) 0;
         border: @color-main-23 1px solid;
         border-left: 0;
         left: 0;
@@ -74,7 +74,7 @@
 
     .flipBtns__btnNext {
         border: @color-main-23 1px solid;
-        border-radius: .2rem 0 0 .2rem;
+        border-radius: (@borderRadius * 1px) 0 0 (@borderRadius * 1px);
         border-right: 0;
         right: 0;
     }
