--- a/src/assets/less/elements/itemShelf.less
+++ b/src/assets/less/elements/itemShelf.less
@@ -126,6 +126,6 @@
 }
 
 .itemShelf + .pagination {
-    border-radius: 0 .2rem .2rem 0;
+    border-radius: 0 (@borderRadius * 1px) (@borderRadius * 1px) 0;
     margin: -1px 0 0 0;
 }
