--- a/src/assets/less/elements/pageBtns.less
+++ b/src/assets/less/elements/pageBtns.less
@@ -6,7 +6,7 @@
 .pageBtns {
 
     background: fade(@color-main-8,70%);
-    border-radius: 0 0 0 .2rem;
+    border-radius: 0 0 0 (@borderRadius * 1px);
     height: 40px;
     line-height: 40px;
     position: absolute;
