--- a/src/assets/less/elements/searchForm.less
+++ b/src/assets/less/elements/searchForm.less
@@ -52,7 +52,7 @@
 
     .autoComplete {
         .mixin-shadow-3;
-        border-radius: 0 0 .2rem .2rem;
+        border-radius: 0 0 (@borderRadius * 1px) (@borderRadius * 1px);
         left: 25px;
         position: absolute;
         top: 50px;
@@ -70,7 +70,7 @@
     z-index: 40;
 
     input[type="text"] {
-        border-radius: 25px 2px 2px 25px;
+        border-radius: 25px (@borderRadius * 1px) (@borderRadius * 1px) 25px;
     }
 
     .btn {
