--- a/src/assets/less/elements/shoppingWidgets.less
+++ b/src/assets/less/elements/shoppingWidgets.less
@@ -50,7 +50,7 @@
 
     background-size: 70px 70px;
     background: @color-main-10;
-    border-radius: 0 .2rem .2rem 0;
+    border-radius: 0 (@borderRadius * 1px) (@borderRadius * 1px) 0;
     right: 0;
     width: 215px;
 
@@ -111,7 +111,7 @@
 
     &.active {
         background: @color-main-8;
-        border-radius: 0 2px 0 0;
+        border-radius: 0 (@borderRadius * 1px) 0 0;
     }
 
 }
@@ -121,7 +121,7 @@
 #listWidget {
 
     background: #fff;
-    border-radius: .2rem 0 0 .2rem;
+    border-radius: (@borderRadius * 1px) 0 0 (@borderRadius * 1px);
     border: @color-main-23 1px solid;
     border-right: 0;
     left: 0;
@@ -156,7 +156,7 @@
 
     .mixin-shadow-3;
     background: @color-main-8;
-    border-radius: 0 0 .2rem .2rem;
+    border-radius: 0 0 (@borderRadius * 1px) (@borderRadius * 1px);
     border: @color-main-8 2px solid;
     display: none;
     position: absolute;
