updated docs, tweaked colors

--- a/src/templates/docs/pages/core/mixins.html
+++ b/src/templates/docs/pages/core/mixins.html
@@ -19,6 +19,10 @@ Use this mixin to _visually_ hide elements. These elements are still accessible 
 
 #### .mixin-clearAppearance
 Use this mixin to disable the default browser styling for certain elements – especially input elements. [Learn more about the appearance rule](https://css-tricks.com/almanac/properties/a/appearance/).
+
+#### .mixin-defaultBorderRadius
+Use this mixin to add the default border radius (as declared in [theme/options.less](/docs/pages/theme/options.html)) to all four corners of your element.
+
 {% endmarkdown %}
 
 {% endblock %}
