+ opacity & interaction utilities

--- a/src/assets/less/yoshino-ui-core.less
+++ b/src/assets/less/yoshino-ui-core.less
@@ -23,6 +23,7 @@
 // utilities
 
 @import "utilities/grid.less";
+@import "utilities/interaction.less";
 @import "utilities/interface.less";
 @import "utilities/jsFallback.less";
 @import "utilities/layout.less";
