--- a/src/assets/less/utilities/styling.less
+++ b/src/assets/less/utilities/styling.less
@@ -89,3 +89,16 @@
 .tc-price                 { color: @color-negative-15 !important; }
 .tc-success, .tc-positive { color: @color-positive-15 !important; }
 .tc-white                 { color: #fff !important; }
+
+// opacity
+
+.opacity-full { opacity: 1 !important; }
+.opacity-9    { opacity: .9 !important; }
+.opacity-8    { opacity: .8 !important; }
+.opacity-7    { opacity: .7 !important; }
+.opacity-6    { opacity: .6 !important; }
+.opacity-5    { opacity: .5 !important; }
+.opacity-4    { opacity: .4 !important; }
+.opacity-3    { opacity: .3 !important; }
+.opacity-2    { opacity: .2 !important; }
+.opacity-1    { opacity: .1 !important; }
