fixed :hover color utilities

--- a/src/assets/less/utilities/interaction.less
+++ b/src/assets/less/utilities/interaction.less
@@ -7,7 +7,7 @@
 
 .generate_hvrStyles (@i) when (@i > 0) {
 
-    .generate_colors((@i - 1));
+    .generate_hvrStyles((@i - 1));
 
     // background colors
 
