--- a/src/assets/less/utilities/interaction.less
+++ b/src/assets/less/utilities/interaction.less
@@ -11,16 +11,16 @@
 
     // background colors
 
-    .hrv-bg-attention-@{i}:hover { background: ~"@{color-attention-@{i}}" !important; }
-    .hrv-bg-blue-@{i}:hover      { background: ~"@{blue-@{i}}" !important; }
-    .hrv-bg-gray-@{i}:hover      { background: ~"@{gray-@{i}}" !important; }
-    .hrv-bg-green-@{i}:hover     { background: ~"@{green-@{i}}" !important; }
-    .hrv-bg-main-@{i}:hover      { background: ~"@{color-main-@{i}}" !important; }
-    .hrv-bg-negative-@{i}:hover  { background: ~"@{color-negative-@{i}}" !important; }
-    .hrv-bg-positive-@{i}:hover  { background: ~"@{color-positive-@{i}}" !important; }
-    .hrv-bg-purple-@{i}:hover    { background: ~"@{purple-@{i}}" !important; }
-    .hrv-bg-red-@{i}:hover       { background: ~"@{red-@{i}}" !important; }
-    .hrv-bg-yellow-@{i}:hover    { background: ~"@{yellow-@{i}}" !important; }
+    .hvr-bg-attention-@{i}:hover { background: ~"@{color-attention-@{i}}" !important; }
+    .hvr-bg-blue-@{i}:hover      { background: ~"@{blue-@{i}}" !important; }
+    .hvr-bg-gray-@{i}:hover      { background: ~"@{gray-@{i}}" !important; }
+    .hvr-bg-green-@{i}:hover     { background: ~"@{green-@{i}}" !important; }
+    .hvr-bg-main-@{i}:hover      { background: ~"@{color-main-@{i}}" !important; }
+    .hvr-bg-negative-@{i}:hover  { background: ~"@{color-negative-@{i}}" !important; }
+    .hvr-bg-positive-@{i}:hover  { background: ~"@{color-positive-@{i}}" !important; }
+    .hvr-bg-purple-@{i}:hover    { background: ~"@{purple-@{i}}" !important; }
+    .hvr-bg-red-@{i}:hover       { background: ~"@{red-@{i}}" !important; }
+    .hvr-bg-yellow-@{i}:hover    { background: ~"@{yellow-@{i}}" !important; }
 
     // text colors
 
