--- a/src/assets/less/utilities/interaction.less
+++ b/src/assets/less/utilities/interaction.less
@@ -38,6 +38,12 @@
 }
 .generate_hvrStyles(25);
 
+.hvr-bg-transparent:hover { background: @color-transparent !important; }
+.hvr-bg-white:hover       { background: #fff !important; }
+
+.hvr-tc-transparent:hover { color: @color-transparent !important; }
+.hvr-tc-white:hover       { color: #fff !important; }
+
 // text decoration
 
 .hvr-tdcr-none:hover { text-decoration: none !important; }
@@ -60,4 +66,4 @@
 // ===========
 
 .tween-fast { transition: all 100ms ease-out !important; }
-.tween-slow { transition: all 100ms ease-out !important; }
+.tween-slow { transition: all 400ms ease-out !important; }
