--- a/src/assets/less/utilities/layout.less
+++ b/src/assets/less/utilities/layout.less
@@ -46,6 +46,7 @@
 .w-1-3,
 .w-1-4,
 .w-1-5,
+.w-1-6,
 .w-2-3,
 .w-2-5,
 .w-3-4,
@@ -56,16 +57,17 @@
     box-sizing: border-box;
 }
 
-.w-1-1 { width: 100%;  }
-.w-1-2 { width: 50%;   }
-.w-1-3 { width: 33.3%; }
-.w-1-4 { width: 25%;   }
-.w-1-5 { width: 20%;   }
-.w-2-3 { width: 66.6%; }
-.w-2-5 { width: 40%;   }
-.w-3-4 { width: 75%;   }
-.w-3-5 { width: 60%;   }
-.w-4-5 { width: 80%;   }
+.w-1-1 { width: 100%; }
+.w-1-2 { width: 50%; }
+.w-1-3 { width: 33.33%; }
+.w-1-4 { width: 25%; }
+.w-1-5 { width: 20%; }
+.w-1-6 { width: 16.67%; }
+.w-2-3 { width: 66.67%; }
+.w-2-5 { width: 40%; }
+.w-3-4 { width: 75%; }
+.w-3-5 { width: 60%; }
+.w-4-5 { width: 80%; }
 
 // auto width
 
