--- a/src/assets/less/utilities/responsive-layout.less
+++ b/src/assets/less/utilities/responsive-layout.less
@@ -50,6 +50,7 @@
     .small-w-1-3,
     .small-w-1-4,
     .small-w-1-5,
+    .small-w-1-6,
     .small-w-2-3,
     .small-w-2-5,
     .small-w-3-4,
@@ -60,16 +61,17 @@
         box-sizing: border-box;
     }
 
-    .small-w-1-1 { width: 100%;  }
-    .small-w-1-2 { width: 50%;   }
-    .small-w-1-3 { width: 33.3%; }
-    .small-w-1-4 { width: 25%;   }
-    .small-w-1-5 { width: 20%;   }
-    .small-w-2-3 { width: 66.6%; }
-    .small-w-2-5 { width: 40%;   }
-    .small-w-3-4 { width: 75%;   }
-    .small-w-3-5 { width: 60%;   }
-    .small-w-4-5 { width: 80%;   }
+    .small-w-1-1 { width: 100%; }
+    .small-w-1-2 { width: 50%; }
+    .small-w-1-3 { width: 33.33%; }
+    .small-w-1-4 { width: 25%; }
+    .small-w-1-5 { width: 20%; }
+    .small-w-1-6 { width: 16.67%; }
+    .small-w-2-3 { width: 66.67%; }
+    .small-w-2-5 { width: 40%; }
+    .small-w-3-4 { width: 75%; }
+    .small-w-3-5 { width: 60%; }
+    .small-w-4-5 { width: 80%; }
 
     // auto width
 
@@ -214,6 +216,7 @@
     .medium-w-1-3,
     .medium-w-1-4,
     .medium-w-1-5,
+    .medium-w-1-6,
     .medium-w-2-3,
     .medium-w-2-5,
     .medium-w-3-4,
@@ -223,17 +226,18 @@
         .mixin-clearfix;
         box-sizing: border-box;
     }
-
-    .medium-w-1-1 { width: 100%;  }
-    .medium-w-1-2 { width: 50%;   }
-    .medium-w-1-3 { width: 33.3%; }
-    .medium-w-1-4 { width: 25%;   }
-    .medium-w-1-5 { width: 20%;   }
-    .medium-w-2-3 { width: 66.6%; }
-    .medium-w-2-5 { width: 40%;   }
-    .medium-w-3-4 { width: 75%;   }
-    .medium-w-3-5 { width: 60%;   }
-    .medium-w-4-5 { width: 80%;   }
+    
+    .medium-w-1-1 { width: 100%; }
+    .medium-w-1-2 { width: 50%; }
+    .medium-w-1-3 { width: 33.33%; }
+    .medium-w-1-4 { width: 25%; }
+    .medium-w-1-5 { width: 20%; }
+    .medium-w-1-6 { width: 16.67%; }
+    .medium-w-2-3 { width: 66.67%; }
+    .medium-w-2-5 { width: 40%; }
+    .medium-w-3-4 { width: 75%; }
+    .medium-w-3-5 { width: 60%; }
+    .medium-w-4-5 { width: 80%; }
 
     // auto width
 
@@ -378,6 +382,7 @@
     .large-w-1-3,
     .large-w-1-4,
     .large-w-1-5,
+    .large-w-1-6,
     .large-w-2-3,
     .large-w-2-5,
     .large-w-3-4,
@@ -387,17 +392,18 @@
         .mixin-clearfix;
         box-sizing: border-box;
     }
-
-    .large-w-1-1 { width: 100%;  }
-    .large-w-1-2 { width: 50%;   }
-    .large-w-1-3 { width: 33.3%; }
-    .large-w-1-4 { width: 25%;   }
-    .large-w-1-5 { width: 20%;   }
-    .large-w-2-3 { width: 66.6%; }
-    .large-w-2-5 { width: 40%;   }
-    .large-w-3-4 { width: 75%;   }
-    .large-w-3-5 { width: 60%;   }
-    .large-w-4-5 { width: 80%;   }
+    
+    .large-w-1-1 { width: 100%; }
+    .large-w-1-2 { width: 50%; }
+    .large-w-1-3 { width: 33.33%; }
+    .large-w-1-4 { width: 25%; }
+    .large-w-1-5 { width: 20%; }
+    .large-w-1-6 { width: 16.67%; }
+    .large-w-2-3 { width: 66.67%; }
+    .large-w-2-5 { width: 40%; }
+    .large-w-3-4 { width: 75%; }
+    .large-w-3-5 { width: 60%; }
+    .large-w-4-5 { width: 80%; }
 
     // auto width
 
@@ -542,6 +548,7 @@
     .xlarge-w-1-3,
     .xlarge-w-1-4,
     .xlarge-w-1-5,
+    .xlarge-w-1-6,
     .xlarge-w-2-3,
     .xlarge-w-2-5,
     .xlarge-w-3-4,
@@ -551,17 +558,18 @@
         .mixin-clearfix;
         box-sizing: border-box;
     }
-
-    .xlarge-w-1-1 { width: 100%;  }
-    .xlarge-w-1-2 { width: 50%;   }
-    .xlarge-w-1-3 { width: 33.3%; }
-    .xlarge-w-1-4 { width: 25%;   }
-    .xlarge-w-1-5 { width: 20%;   }
-    .xlarge-w-2-3 { width: 66.6%; }
-    .xlarge-w-2-5 { width: 40%;   }
-    .xlarge-w-3-4 { width: 75%;   }
-    .xlarge-w-3-5 { width: 60%;   }
-    .xlarge-w-4-5 { width: 80%;   }
+    
+    .xlarge-w-1-1 { width: 100%; }
+    .xlarge-w-1-2 { width: 50%; }
+    .xlarge-w-1-3 { width: 33.33%; }
+    .xlarge-w-1-4 { width: 25%; }
+    .xlarge-w-1-5 { width: 20%; }
+    .xlarge-w-1-6 { width: 16.67%; }
+    .xlarge-w-2-3 { width: 66.67%; }
+    .xlarge-w-2-5 { width: 40%; }
+    .xlarge-w-3-4 { width: 75%; }
+    .xlarge-w-3-5 { width: 60%; }
+    .xlarge-w-4-5 { width: 80%; }
 
     // auto width
 
