improved .slider & .superHeader

--- a/src/assets/less/elements/slider.less
+++ b/src/assets/less/elements/slider.less
@@ -28,6 +28,10 @@
     padding: 0;
     position: relative;
     text-align: left;
+    
+    a& {
+        text-decoration: none;
+    }
 
     img {
         display: block;
