--- a/src/assets/less/elements/modal.less
+++ b/src/assets/less/elements/modal.less
@@ -1,9 +1,9 @@
 /** modal.less */
 
 .modal {
-    background: @color-main-25;
     .mixin-defaultBorderRadius;
-    box-shadow: 0 0 20px @color-main-5;
+    .mixin-shadow-4;
+    background: @color-main-25;
     left: 50%;
     margin-left: -33rem;
     position: absolute;
@@ -70,7 +70,6 @@
 
 .modalPage {
 
-    background: @color-main-8;
     padding-bottom: 6rem;
 
     .modal {
