--- a/src/assets/less/utilities/grid.less
+++ b/src/assets/less/utilities/grid.less
@@ -13,6 +13,7 @@
     .w-1-3,
     .w-1-4,
     .w-1-5,
+    .w-1-6,
     .w-2-3,
     .w-2-5,
     .w-3-4,
@@ -36,6 +37,7 @@
     .w-1-3,
     .w-1-4,
     .w-1-5,
+    .w-1-6,
     .w-2-3,
     .w-2-5,
     .w-3-4,
