fixed some code formatting

--- a/src/assets/less/elements/datePicker.less
+++ b/src/assets/less/elements/datePicker.less
@@ -4,9 +4,9 @@
 // =====
 
 .datePicker {
+    .mixin-defaultBorderRadius;
     .mixin-shadow-3;
     background: #fff;
-    .mixin-defaultBorderRadius;
     border: @color-main-20 1px solid;
     box-sizing: border-box;
     overflow: hidden;
@@ -43,6 +43,7 @@
     height: 4rem;
     line-height: 4rem;
     text-align: center;
+    background: @color-main-25;
 }
 
 .datePicker__days {
@@ -52,6 +53,7 @@
     border-left: 0;
     border-radius: 0;
     border-right: 0;
+    border-color: @color-main-24;
     width: 100%;
 
     th,
