--- a/src/assets/less/elements/superHeader.less
+++ b/src/assets/less/elements/superHeader.less
@@ -13,7 +13,7 @@
     display: block;
     min-height: @superHeader-height;
     position: relative;
-    
+
     * {
         user-select: none !important;
     }
@@ -27,13 +27,13 @@
     box-sizing: border-box;
     margin: 0 auto;
     min-height: @superHeader-height;
-    padding: 4rem 0;
     position: relative;
     width: @globalWidth;
 }
 
 .superHeader__body {
     color: #fff;
+    padding: 4rem 2rem;
     position: relative;
     z-index: 2;
 }
