--- a/src/assets/less/elements/flipBtns.less
+++ b/src/assets/less/elements/flipBtns.less
@@ -14,7 +14,7 @@
 .flipBtns__btnNext {
 
     box-sizing: border-box;
-    background: @color-main-24;
+    background: #fff;
     border: @color-main-23 1px solid;
     color: @color-main-8;
     cursor: pointer;
@@ -26,7 +26,7 @@
     width: 30px;
 
     &:hover {
-        background: @color-main-23;
+        background: @color-main-25;
     }
 
     &::after {
