--- a/src/assets/less/utilities/styling.less
+++ b/src/assets/less/utilities/styling.less
@@ -7,6 +7,7 @@
 .b-r-0 { border-right: 0 !important; }
 .b-b-0 { border-bottom: 0 !important; }
 .b-l-0 { border-left: 0 !important; }
+.b-all { border: @color-main-23 1px solid !important; }
 .b-t   { border-top: @color-main-23 1px solid !important; }
 .b-r   { border-right: @color-main-23 1px solid !important; }
 .b-b   { border-bottom: @color-main-23 1px solid !important; }
@@ -27,6 +28,7 @@
 .sh-1 { .mixin-shadow-1 !important; }
 .sh-2 { .mixin-shadow-2 !important; }
 .sh-3 { .mixin-shadow-3 !important; }
+.sh-4 { .mixin-shadow-4 !important; }
 
 // text shadows
 
