--- a/src/assets/less/utilities/interaction.less
+++ b/src/assets/less/utilities/interaction.less
@@ -34,6 +34,19 @@
     .hvr-tc-purple-@{i}:hover     { color: ~"@{purple-@{i}}" !important; }
     .hvr-tc-red-@{i}:hover        { color: ~"@{red-@{i}}" !important; }
     .hvr-tc-yellow-@{i}:hover     { color: ~"@{yellow-@{i}}" !important; }
+    
+    // border colors
+
+    .hvr-b-attention-@{i}:hover   { border-color: ~"@{color-attention-@{i}}" !important; }
+    .hvr-b-blue-@{i}:hover        { border-color: ~"@{blue-@{i}}" !important; }
+    .hvr-b-gray-@{i}:hover        { border-color: ~"@{gray-@{i}}" !important; }
+    .hvr-b-green-@{i}:hover       { border-color: ~"@{green-@{i}}" !important; }
+    .hvr-b-main-@{i}:hover        { border-color: ~"@{color-main-@{i}}" !important; }
+    .hvr-b-negative-@{i}:hover    { border-color: ~"@{color-negative-@{i}}" !important; }
+    .hvr-b-positive-@{i}:hover    { border-color: ~"@{color-positive-@{i}}" !important; }
+    .hvr-b-purple-@{i}:hover      { border-color: ~"@{purple-@{i}}" !important; }
+    .hvr-b-red-@{i}:hover         { border-color: ~"@{red-@{i}}" !important; }
+    .hvr-b-yellow-@{i}:hover      { border-color: ~"@{yellow-@{i}}" !important; }
 
 }
 .generate_hvrStyles(25);
@@ -48,6 +61,14 @@
 
 .hvr-tdcr-none:hover { text-decoration: none !important; }
 .hvr-tdcr-undl:hover { text-decoration: underline !important; }
+
+// shadows
+
+.hvr-sh-1:hover    { .mixin-shadow-1 !important; }
+.hvr-sh-2:hover    { .mixin-shadow-2 !important; }
+.hvr-sh-3:hover    { .mixin-shadow-3 !important; }
+.hvr-sh-4:hover    { .mixin-shadow-4 !important; }
+.hvr-sh-none:hover { box-shadow: none !important; }
 
 // opacity
 
