--- a/src/assets/less/utilities/layout.less
+++ b/src/assets/less/utilities/layout.less
@@ -79,8 +79,14 @@
 
     .generate_width_height((@i - 1));
 
-    .w-@{i} { width:  1rem * @i !important; }
-    .h-@{i} { height: 1rem * @i !important; }
+    .w-@{i} {
+        width:  1rem * @i !important; box-sizing: border-box;
+    }
+    
+    .h-@{i} {
+        height: 1rem * @i !important;
+        box-sizing: border-box;
+    }
 
 }
 .generate_width_height(60);
