--- a/src/templates/docs/pages/elements/slider.html
+++ b/src/templates/docs/pages/elements/slider.html
@@ -42,21 +42,21 @@ Sliders are simple slide show elements that can contain images, text or both. A 
         <div class="slider slider--super" data-slider="autoplay:5000; transition:animate;">
             <div class="slider__slides">
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/sodbrennen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/1" alt="" />
                     <div class="slider__caption">
                         <h3>Sodbrennen</h3>
                         <p>Schmerzen in der Brust? Häufiges Aufstoßen? Wir sagen, was Sie gegen Sodbrennen tun können!</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/kopfschmerzen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/2" alt="" />
                     <div class="slider__caption">
                         <h3>Migräne</h3>
                         <p>Hämmern, Pochen, Bohren – wie Sie den Schmerz in den Griff bekommen …</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/beine-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/3" alt="" />
                     <div class="slider__caption">
                         <h3>Chronische Venenerkrankung</h3>
                         <p>Was tun schweren Beinen und Krampfadern?</p>
@@ -76,21 +76,21 @@ Sliders are simple slide show elements that can contain images, text or both. A 
         <div class="slider slider--super" data-slider="control:pageBtns; clickable:true">
             <div class="slider__slides">
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/sodbrennen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/1" alt="" />
                     <div class="slider__caption">
                         <h3>Sodbrennen</h3>
                         <p>Schmerzen in der Brust? Häufiges Aufstoßen? Wir sagen, was Sie gegen Sodbrennen tun können!</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/kopfschmerzen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/2" alt="" />
                     <div class="slider__caption">
                         <h3>Migräne</h3>
                         <p>Hämmern, Pochen, Bohren – wie Sie den Schmerz in den Griff bekommen …</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/beine-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/3" alt="" />
                     <div class="slider__caption">
                         <h3>Chronische Venenerkrankung</h3>
                         <p>Was tun schweren Beinen und Krampfadern?</p>
@@ -110,21 +110,21 @@ Sliders are simple slide show elements that can contain images, text or both. A 
         <div class="slider slider--super" data-slider="control:flipBtns; transition:animate;">
             <div class="slider__slides">
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/sodbrennen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/1" alt="" />
                     <div class="slider__caption">
                         <h3>Sodbrennen</h3>
                         <p>Schmerzen in der Brust? Häufiges Aufstoßen? Wir sagen, was Sie gegen Sodbrennen tun können!</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/kopfschmerzen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/2" alt="" />
                     <div class="slider__caption">
                         <h3>Migräne</h3>
                         <p>Hämmern, Pochen, Bohren – wie Sie den Schmerz in den Griff bekommen …</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/beine-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/3" alt="" />
                     <div class="slider__caption">
                         <h3>Chronische Venenerkrankung</h3>
                         <p>Was tun schweren Beinen und Krampfadern?</p>
@@ -144,21 +144,21 @@ Sliders are simple slide show elements that can contain images, text or both. A 
         <div class="slider" data-slider="control:pageBtns; transition:fade;">
             <div class="slider__slides">
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/sodbrennen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/1" alt="" />
                     <div class="slider__caption">
                         <h3>Sodbrennen</h3>
                         <p>Schmerzen in der Brust? Häufiges Aufstoßen? Wir sagen, was Sie gegen Sodbrennen tun können!</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/kopfschmerzen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/2" alt="" />
                     <div class="slider__caption">
                         <h3>Migräne</h3>
                         <p>Hämmern, Pochen, Bohren – wie Sie den Schmerz in den Griff bekommen …</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/beine-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/3" alt="" />
                     <div class="slider__caption">
                         <h3>Chronische Venenerkrankung</h3>
                         <p>Was tun schweren Beinen und Krampfadern?</p>
@@ -178,21 +178,21 @@ Sliders are simple slide show elements that can contain images, text or both. A 
         <div class="slider" data-slider="control:pageBtns; transition:fade;">
             <div class="slider__slides">
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/sodbrennen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/1" alt="" />
                     <div class="slider__caption">
                         <h3>Sodbrennen</h3>
                         <p>Schmerzen in der Brust? Häufiges Aufstoßen? Wir sagen, was Sie gegen Sodbrennen tun können!</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/kopfschmerzen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/2" alt="" />
                     <div class="slider__caption">
                         <h3>Migräne</h3>
                         <p>Hämmern, Pochen, Bohren – wie Sie den Schmerz in den Griff bekommen …</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/beine-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/3" alt="" />
                     <div class="slider__caption">
                         <h3>Chronische Venenerkrankung</h3>
                         <p>Was tun schweren Beinen und Krampfadern?</p>
@@ -212,21 +212,21 @@ Sliders are simple slide show elements that can contain images, text or both. A 
         <div class="slider" data-slider="control:flipBtns--inset;">
             <div class="slider__slides">
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/sodbrennen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/1" alt="" />
                     <div class="slider__caption">
                         <h3>Sodbrennen</h3>
                         <p>Schmerzen in der Brust? Häufiges Aufstoßen? Wir sagen, was Sie gegen Sodbrennen tun können!</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/kopfschmerzen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/2" alt="" />
                     <div class="slider__caption">
                         <h3>Migräne</h3>
                         <p>Hämmern, Pochen, Bohren – wie Sie den Schmerz in den Griff bekommen …</p>
                     </div>
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/beine-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/3" alt="" />
                     <div class="slider__caption">
                         <h3>Chronische Venenerkrankung</h3>
                         <p>Was tun schweren Beinen und Krampfadern?</p>
@@ -246,13 +246,13 @@ Sliders are simple slide show elements that can contain images, text or both. A 
         <div class="slider p-b-10" data-slider="control:pageDots; clickable:true; transition:fade;">
             <div class="slider__slides m-b-2">
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/sodbrennen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/1" alt="" />
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/kopfschmerzen-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/2" alt="" />
                 </div>
                 <div class="slider__slide">
-                    <img src="assets/img/dummy/beine-700x350.jpg" alt="" />
+                    <img src="https://placeimg.com/760/350/nature/3" alt="" />
                 </div>
             </div>
         </div>
