--- a/src/templates/elements/filters.html
+++ b/src/templates/elements/filters.html
@@ -96,31 +96,31 @@
             </div>
             <div class="filterGroup__body">
                 <a class="filter filter--multi" href="#">
-                    <span class="rating rating--small rating--5of5">
+                    <span class="rating rating--small rating--5">
                         <span class="rating__stars">5 von 5 Sternen</span>
                     </span>
                     <span class="filter__counter">8</span>
                 </a>
                 <a class="filter filter--multi" href="#">
-                    <span class="rating rating--small rating--4of5">
+                    <span class="rating rating--small rating--4">
                         <span class="rating__stars">4 von 5 Sternen</span>
                     </span>
                     <span class="filter__counter">2</span>
                 </a>
                 <a class="filter filter--multi" href="#">
-                    <span class="rating rating--small rating--3of5">
+                    <span class="rating rating--small rating--3">
                         <span class="rating__stars">3 von 5 Sternen</span>
                     </span>
                     <span class="filter__counter">12</span>
                 </a>
                 <a class="filter filter--multi" href="#">
-                    <span class="rating rating--small rating--2of5">
+                    <span class="rating rating--small rating--2">
                         <span class="rating__stars">2 von 5 Sternen</span>
                     </span>
                     <span class="filter__counter">2</span>
                 </a>
                 <a class="filter filter--multi" href="#">
-                    <span class="rating rating--small rating--1of5">
+                    <span class="rating rating--small rating--1">
                         <span class="rating__stars">1 von 5 Sternen</span>
                     </span>
                     <span class="filter__counter">9</span>
